# rdkafka-1c

./: .gitignore  CMakeLists.txt  README.md  build-integration-tests.bat  build-integration-tests.sh  build-tests.bat  build-tests.sh  build.bat  build.sh  docker-compose.yml  generate.bat  generate.sh  vcpkg-configuration.json  vcpkg-install.bat  vcpkg-install.sh  vcpkg.json
cf/: ConfigDumpInfo.xml  Configuration.xml
cf/Catalogs/: БрокерыКафка.xml  НастройкиКафки.xml
cf/Catalogs/БрокерыКафка/Forms/: ФормаСписка.xml  ФормаЭлемента.xml
cf/Catalogs/БрокерыКафка/Forms/ФормаСписка/Ext/: Form.xml
cf/Catalogs/БрокерыКафка/Forms/ФормаЭлемента/Ext/: Form.xml
cf/Catalogs/БрокерыКафка/Forms/ФормаЭлемента/Ext/Form/: Module.bsl
cf/Catalogs/НастройкиКафки/Commands/ОткрытьЛоги/Ext/: CommandModule.bsl
cf/Catalogs/НастройкиКафки/Ext/: ManagerModule.bsl  ObjectModule.bsl
cf/Catalogs/НастройкиКафки/Forms/: ФормаЛоги.xml  ФормаСписка.xml  ФормаЭлемента.xml
cf/Catalogs/НастройкиКафки/Forms/ФормаЛоги/Ext/: Form.xml
cf/Catalogs/НастройкиКафки/Forms/ФормаЛоги/Ext/Form/: Module.bsl
cf/Catalogs/НастройкиКафки/Forms/ФормаСписка/Ext/: Form.xml
cf/Catalogs/НастройкиКафки/Forms/ФормаЭлемента/Ext/: Form.xml
cf/Catalogs/НастройкиКафки/Forms/ФормаЭлемента/Ext/Form/: Module.bsl
cf/CommonModules/: ОбменДаннымиВМоделиСервиса.xml  ОбщегоНазначения.xml
cf/CommonModules/ОбменДаннымиВМоделиСервиса/Ext/: Module.bsl
cf/CommonModules/ОбщегоНазначения/Ext/: Module.bsl
cf/CommonPictures/: Кафка.xml
cf/CommonPictures/Кафка/Ext/: Picture.xml
cf/CommonTemplates/: RdKafka1C.xml
cf/DataProcessors/: КафкаКоннектор.xml
cf/DataProcessors/КафкаКоннектор/Ext/: ObjectModule.bsl
cf/DataProcessors/КафкаКоннектор/Forms/: Форма.xml
cf/DataProcessors/КафкаКоннектор/Forms/Форма/Ext/: Form.xml
cf/DataProcessors/КафкаКоннектор/Forms/Форма/Ext/Form/: Module.bsl
cf/DataProcessors/КафкаКоннектор/Templates/: RdKafka1C.xml
cf/Ext/: ClientApplicationInterface.xml  HomePageWorkArea.xml
cf/Languages/: Русский.xml
cf/Subsystems/: Кафка.xml
doc/: build.md  cmake.md  how-to-use.md  kafka.md  program-interface.md  vcpkg.md
doc/res/: structure.plantuml
epf/: КафкаКоннектор.xml
epf/КафкаКоннектор/Forms/: Форма.xml
epf/КафкаКоннектор/Forms/Форма/Ext/: Form.xml
epf/КафкаКоннектор/Forms/Форма/Ext/Form/: Module.bsl
include/: resource.h  stdafx.h  types.h
kafka-broker/: dockerfile
kafka-ui/: dockerfile
package/: INFO.XML  MANIFEST.XML
src/: AddInNative.cpp  AddInNative.h  Config.cpp  Config.h  ConfigBuilder.cpp  ConfigBuilder.h  DeliveryReport.cpp  DeliveryReport.h  ErrorHandler.cpp  ErrorHandler.h  Event.cpp  Event.h  IRdKafka1C.h  Loger.cpp  Loger.h  MessageStatusCollector.cpp  MessageStatusCollector.h  RdKafka1C.cpp  RdKafka1C.h  Rebalance.cpp  Rebalance.h  Strings.cpp  Strings.h  strings.cpp  strings.h  utils.h
test/: AddInNativeTest.cpp  AddInNativeTest.h  MemoryManager.cpp  MemoryManager.h  MockAddInNative.cpp  MockAddInNative.h  MockKafkaConsumer.cpp  MockKafkaConsumer.h  MockMessage.cpp  MockMessage.h  MockProducer.cpp  MockProducer.h  MockRdKafka1C.cpp  MockRdKafka1C.h  RdKafka1CIntegrationTest.cpp  RdKafka1CIntegrationTest.h  RdKafka1CIntegrtionTest.cpp  RdKafka1CIntegrtionTest.h  RdKafka1CTest.cpp  RdKafka1CTest.h  RdKafka1c_test.cpp  main.cpp
vcpkg/: install-libs.bat  install-libs.sh  uninstall-libs.bat  uninstall-libs.sh
vcpkg/static-triplets/: x64-linux.cmake
